<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Dialog Title -->
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_recipe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <!-- Dialog Message -->
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes_receipt"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <!-- Dialog Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- No Button -->
        <Button
            android:id="@+id/dialog_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <!-- Yes Button -->
        <Button
            android:id="@+id/dialog_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
