<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/green"
    app:cardBackgroundColor="@color/beige"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- תמונה -->
        <ImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <!-- שם המנה -->
        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/steak_platter_card"
            android:textColor="@color/green"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- שם המחבר -->
        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:paddingTop="4dp"
            android:text="@string/author_unknown_card"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- כפתור "פרטים נוספים" -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_details"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/view_details_card"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            app:cornerRadius="8dp"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp" />

        <!-- כפתור "ערוך" -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/edit_card"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/green"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp" />

        <!-- כפתור "מחיקה" -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/delete_card1"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
             />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
